# chatgpt_akinator

./: .gitignore  README.md  pyproject.toml  run_akinator.py
data/imas/: model.pkl
data/pokemon3/qanda/: ゼニガメ.json  ヒトカゲ.json  フシギダネ.json
data/pokemon3/source/: ゼニガメ.json  ヒトカゲ.json  フシギダネ.json
data/programming_languages/: model.pkl
llmakinator/: __init__.py  akinator.py  preprocess.py
notebooks/: .env.sample  imas_list.ipynb  pokemon3.ipynb  programming_language.ipynb
