[tool.poetry]
name = "chatgpt-akinator"
version = "0.1.0"
description = ""
authors = ["Keisuke Ogaki <hikingko1@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_akinator"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.150"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
